crates/weft-snapshots/tests/snapshots/react-tsx/corpus-confirm-dialog.snap
---
source: crates/weft-snapshots/tests/snapshots.rs
description: corpus-confirm-dialog as react-tsx
---
export type WeftEvent = { id: string; action: string; item?: string };

export type WeftProps = {
  data?: any;
  actions?: Record<string, (event: WeftEvent) => void>;
  onChange?: (path: string, value: unknown) => void;
};

function _text(v: unknown): string {
  if (typeof v === "string") return v;
  if (typeof v === "number") return Number.isFinite(v) ? String(v) : "";
  if (typeof v === "boolean") return String(v);
  return "";
}

function _on(v: unknown): boolean {
  return v === "false" ? false : Boolean(v);
}

function _squash(v: string): string {
  return v.trim().replace(/\s+/g, " ");
}

function _act(actions: WeftProps["actions"], event: WeftEvent): void {
  if (typeof actions !== "object" || actions === null || !Object.hasOwn(actions, event.action)) return;
  const fn = actions[event.action];
  if (typeof fn === "function") fn(event);
}

export default function WeftScreen({ data, actions, onChange }: WeftProps) {
  return (
    <main data-weft-id="files" aria-label="File">
      <h1 data-weft-id="title">Quarterly report</h1>
      <button data-weft-id="delete-file" type="button" data-variant="danger" onClick={(_e) => _act(actions, { id: "delete-file", action: "dialog.open" })}>Delete file</button>
      {_on(data?.confirmOpen) && (
        <dialog data-weft-id="confirm" aria-label="Delete file?" open aria-modal="true" onKeyDown={(_e) => { if (_e.key !== "Escape") return; _e.preventDefault(); onChange?.("$.confirmOpen", false); _act(actions, { id: "confirm", action: "dialog.close" }); }}>
          <div data-weft-id="warning">This cannot be undone.</div>
          <div data-weft-id="filename">
            {!(_text(data?.file?.name).trim() === "") ? _squash(_text(data?.file?.name)) : ""}
          </div>
          <div data-weft-slot="actions">
            <button data-weft-id="cancel" type="button" onClick={(_e) => _act(actions, { id: "cancel", action: "dialog.close" })}>Cancel</button>
            <button data-weft-id="confirm-delete" type="button" data-variant="danger" onClick={(_e) => _act(actions, { id: "confirm-delete", action: "file.delete" })}>Delete</button>
          </div>
        </dialog>
      )}
    </main>
  );
}
